--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch --tsconfig ./tsconfig.json ./src/index.ts",
-    "start": "node ./dist/index.js",
-    "build": "tsx build --tsconfig ./tsconfig.json ./src/index.ts"
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "start": "ts-node-dev --transpile-only src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +31,7 @@
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.9",
     "prisma": "^5.2.0",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.8",
     "typescript": "^5.2.2"
   }
